return the last element of an array

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
 
     <!-- <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"> -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
 
     <title>Array shapes in JavaScript</title>
   </head>
@@ -44,9 +47,6 @@
         </a>
       </p>
     </nav> -->
-
-
-
 
     <header>
       <h1>Array shapes in JavaScript</h1>
@@ -87,8 +87,12 @@
     </div>
 
     <footer>
-      <p class="footer">The best reference source is always the official documentation 😉<br />
-        <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array" target="_blank">
+      <p class="footer">
+        The best reference source is always the official documentation 😉<br />
+        <a
+          href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array"
+          target="_blank"
+        >
           <i>MDN WEB DOCS</i>
         </a>
       </p>
